vertical align fix for selector popup

--- a/css/global.css
+++ b/css/global.css
@@ -179,7 +179,7 @@ img[alt] {
 
 #popup_selector
 {
-	top:-30px;
+	top:-18px;
 	left:none;
 	font-size: 30px;
 	width: auto;
